syntax = "proto3";

package pb;

option go_package = "github.com/g41797/memphisgrpc;pb";

option php_namespace = "g4197\\memphisphp\\pb";
option php_metadata_namespace = "g4197\\memphisphp\\metadata";

import "station.proto";
import "msg.proto";
import "stop.proto";

message Producer {
	string name = 1;
}

message CreateProducerRequest {
	Station station = 1;
	Producer producer = 2;
}

message DestroyProducerRequest {
	Station station = 1;
	Producer producer = 2;
}

message ProduceMessages {
	oneof data {
		CreateProducerRequest start = 1;
		Msg msg = 2;
		Stop stop = 3;
	};
  }
