syntax = "proto3";

package pb;

option go_package = "github.com/g41797/grpc-pingpong;pb";

option php_namespace = "Memphisphp\\Pb";
option php_metadata_namespace = "Memphisphp\\Metadata";

message Station {
    string name = 1;
}

message MaxMessageAgeSecondsRet {
    int32 seconds = 1;
}

message MessagesRet {
    int32 messages = 1;
}

message BytesRet {
    int32 bytes = 1;
}

message AckBasedRet {}

message RetentionOpt {
    oneof retentions {
        MaxMessageAgeSecondsRet mmasret = 1;
        MessagesRet msgret = 2;
        BytesRet bret = 3;
        AckBasedRet abret = 4;
    }
}

message StorageOpt {
    enum StorageType {
        Disk = 0;
        Memory = 1;
    }
    StorageType storageType = 1;
}

message PartitionOpt {
    int32 number = 1;
}

message StationOpions {
    optional StorageOpt storage = 1;
    optional RetentionOpt retention = 2;
}

message CreateStationRequest {
    Station station = 1;
    optional StationOpions options = 2;
}

message DestroyStationRequest {
    Station station = 1;
}

